AdvancedNetworkSpecialist/AmazonVPCFundamentals/14-VPCWithPublicSubnet.yaml
---
# aws cloudformation validate-template --template-body file://14-VPCWithPublicSubnet.yaml
# aws cloudformation create-stack --stack-name ANS-14 --template-body file://14-VPCWithPublicSubnet.yaml 
# aws cloudformation delete-stack --stack-name ANS-14

AWSTemplateFormatVersion: "2010-09-09"
Description:  This template deploys a VPC, Public Subnet, IGW, Route Table and Instance


Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: "VPC configuration"
        Parameters:
          - VPCName
          - VPCCidr
      - Label:
          default: "Subnet configuration"
        Parameters:
          - PublicSubnetName
          - PublicSubnetCidr
      - Label:
          default: "Internet Gateway and Routes"
        Parameters:
          - InternetGatewayName
          - RouteTableName
      - Label:
          default: "Instance configuration"
        Parameters:
          - InstanceName
          - InstanceImageId
          - KeyName
        
Parameters:
  VPCName:
    Description: VPC name
    Type: String
    Default: "My-VPC"
  VPCCidr:
    Description: VPC CIDR
    Type: String
    Default: 10.100.0.0/16
  PublicSubnetName:
    Description: Public Subnet name
    Type: String
    Default: "Public-Subnet"
  PublicSubnetCidr:
    Description: Public Subnet CIDR
    Type: String
    Default: 10.100.0.0/24

  InternetGatewayName:
    Description: Internet Gateway name
    Type: String
    Default: "VPC-IGW"
  RouteTableName:
    Description: Route Table name
    Type: String
    Default: "VPC-RT"
  InstanceName:
    Description: The Instance name
    Type: String
    Default: "A-Instance"
  InstanceImageId:
    Description: The AMI number
    Type: AWS::EC2::Image::Id
    Default: ami-0997c2f07703b91fb
  KeyName:
    Description: The EC2 Key name
    Type: String
    Default: "dso-paris"

Resources:
  # VPC and Public Subnet
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPCCidr
      EnableDnsSupport: "true"
      EnableDnsHostnames: "true"
      Tags:
        - Key: Name
          Value: !Ref VPCName
  
  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [ 0, !GetAZs ]
      CidrBlock: !Ref PublicSubnetCidr
      MapPublicIpOnLaunch: true
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: !Ref PublicSubnetName

  # Internet Gateway and Attachment
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Ref InternetGatewayName
  
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  # Route, Route Table and Association
  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Ref RouteTableName
  
  DefaultRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  
  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTable
      SubnetId: !Ref PublicSubnet

  # Instance and Security Group
  Instance:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone:  !Select [ 0, !GetAZs ]
      ImageId: !Ref InstanceImageId
      InstanceType: t3a.micro
      KeyName: !Ref KeyName
      SecurityGroupIds:
        - !Ref SSHSecurityGroup
      SubnetId: !Ref PublicSubnet
      Tags:
        - Key: Name
          Value: !Ref InstanceName

  SSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access via port 22
      SecurityGroupIngress:
      - CidrIp: 0.0.0.0/0
        FromPort: 22
        IpProtocol: tcp
        ToPort: 22
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: My Security Group

Outputs:
  VpcId:
    Description: Id of the VPC
    Value: !Ref VPC
  PublicSubnetId:
    Description: Id of the Public Subnet
    Value: !Ref PublicSubnet
  InternetGatewayId:
    Description: Id of the Internet Gateway
    Value: !Ref InternetGateway
  InternetGatewayAttachmentId:
    Description: Id of the Internet Gateway Attachment
    Value: !Ref InternetGatewayAttachment
  RouteTableId:
    Description: Id of the Route Table
    Value: !Ref RouteTable
  DefaultRouteId:
    Description: Id of the default Route Table
    Value: !Ref DefaultRoute
  PublicSubnetRouteTableAssociationId:
    Description: Id of the Public Subnet Route Table Association
    Value: !Ref PublicSubnetRouteTableAssociation
  InstanceId:
    Description: Id of the Instance 
    Value: !Ref Instance
  InstancePrivateIP:
    Description: Private IP v4 of the Instance 
    Value: !GetAtt Instance.PrivateIp
  InstancePublicIP:
    Description: Public IP v4 of the Instance 
    Value: !GetAtt Instance.PublicIp
  SSHSecurityGroupId:
    Description: Id of the SSH Security Group
    Value: !Ref SSHSecurityGroup
